--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon src/app.ts",
-    "build": "docker build -t banksys .",
     "run": "docker run -p 8080:8080 banksys",
+    "build": "tsc -p .",
     "test": "jest"
   },
   "devDependencies": {
